change to explicitive (i got explicit permission)

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div id="input-output-wrapper">
-        <marquee id="title-marquee"><h1>brainfrick interpereter</h1></marquee>
+        <marquee id="title-marquee"><h1>brainfuck interpereter</h1></marquee>
         <textarea id="user-code" class="wrapper-items" placeholder="Your code here.."></textarea>
         
         <input id="user-input" class="wrapper-items" placeholder="input" />
