i forgot what i did but i think i updated something

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         #output {
             color: black;
         }
+        
+        #run:hover {
+            background-color: #ffcccb;
+            color: white;
+        }
+        
         textarea {
             height: 30%;
         }
