whops wrong variable name

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         function run_code() {
             let output = document.getElementById("output");
             output.value = "";
-            if (typeof(w) != "undefined") {
+            if (typeof(myWoderfulWorkerSlaveUnpaidInternSlaveWorker) != "undefined") {
                 myWoderfulWorkerSlaveUnpaidInternSlaveWorker.terminate();
                 myWoderfulWorkerSlaveUnpaidInternSlaveWorker = undefined;
             }
